--- a/src/styles/chat_main.css
+++ b/src/styles/chat_main.css
@@ -1,3 +1,8 @@
+* {
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI"
+  , "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-weight: 500;
+}
 .regist-container {
     position: fixed;
     bottom: 10%;
