채팅목록 버튼 추가

--- a/src/styles/chat_main.css
+++ b/src/styles/chat_main.css
@@ -33,6 +33,10 @@
     margin-top: 20px;
     cursor: pointer;
   }
+  #btn-exit{
+    float: right;
+    margin:5px;
+  }
   .chatroom-readCount:empty {
     display: none; /* 내용이 없는 경우 숨김 */
   }
