--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -5,6 +5,11 @@ input[type="text"] {
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+.textarea-container{
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  }
 .chat-textarea{
     width: 100%; 
     border: 1px solid #ccc; 
@@ -13,6 +18,7 @@ input[type="text"] {
     padding: 10px; 
     resize: none;
     height: 50px;
+    padding-right: 40px;
   }
 
   .message-container{
@@ -137,13 +143,13 @@ input[type="text"] {
   }
   
   .imoticon-button{
-        border: 1px solid #ccc; 
-        border-radius: 8px; 
-        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1); 
-        padding: 5px; 
-        resize: none;
-        height: 50px;
-        display: flex; align-items: center; justify-content: center;background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 50%;
+    right: 10px; /* textarea 우측 여백 */
+    transform: translateY(-50%);
+    font-size: 1.2rem; /* 아이콘 크기 조절 */
+    color: #999; /* 아이콘 색상 */
+    
       }
   .chat_thumbnailUrl{
     width:200px;
@@ -426,15 +432,7 @@ input[type="text"] {
         display: flex;
         padding: 10px;
       }
-      .chat-textarea{
-        width: 90%; 
-        border: 1px solid #ccc; 
-        border-radius: 8px; 
-        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1); 
-        padding: 10px; 
-        resize: none;
-        height: 50px;
-      }
+      
   
       .profile-image{
       border-radius: 50%; /* 원형태로 보여주기 위해 반지름을 50%로 설정 */
